# chippy

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml
crates/chippy/: Cargo.toml  index.html  upload_new_build.sh
crates/chippy/src/: app.rs  main.rs  worker_thread.rs
crates/fishand/: Cargo.toml
crates/fishand/src/: client.rs  conn.rs  main.rs  svc.rs
crates/fishandchippy/: Cargo.toml
crates/fishandchippy/src/: events.rs  game_types.rs  integer.rs  lib.rs  ser_glue.rs
crates/fishandchippy/src/events/: client.rs  server.rs
crates/fishandchippy/src/game_types/: player.rs  pot.rs
crates/fishandchippy/src/ser_glue/: list.rs  map.rs  string.rs  tuple.rs  uuid.rs
