[package]
name = "chippy"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
fishandchippy = {path = "../fishandchippy"}
egui = "0.32.1"
eframe = "0.32.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)