[package]
name = "chippy"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
fishandchippy = {path = "../fishandchippy"}
egui = "0.32.1"
eframe = "0.32.1"
web-sys = "0.3.70"
console_log = "1.0.0"
log = "0.4.27"
console_error_panic_hook = "0.1.7"
ewebsock = "0.8.0"
wasm-bindgen-futures = "0.4.50"
