[package]
name = "fishand"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
tokio = { version = "1.47.1", features = ["full"] }
fishandchippy = {path = "../fishandchippy"}
http = "1.3.1"
hyper = "1.7.0"
soketto = { version = "0.8.1", features = ["http"] }
hyper-util = { version = "0.1.16", features = ["full"] }
futures = "0.3.31"
tokio-util = { version = "0.7.16", features = ["compat"] }
http-body-util = "0.1.3"
