[package]
name = "fishand"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
tokio = { version = "1.47.1", features = ["full"] }
fishandchippy = {path = "../fishandchippy"}
futures = "0.3.31"
tokio-tungstenite = "0.27.0"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }
